--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8" />
+    <meta charset="UTF-8" />
+    <meta
+    http-equiv="Content-Security-Policy"
+    content="script-src 'self' 'unsafe-inline'"
+  />
 		<title>SysTop | System Monitor</title>
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/all.min.css" />
@@ -62,5 +66,6 @@
 		</nav>
 
 		<script src="js/tabs.js"></script>
+		<script src="js/monitor.js"></script>
 	</body>
 </html>
