--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,26 @@
 		</nav>
 
 		<script src="js/tabs.js"></script>
-		<script src="js/monitor.js"></script>
+    <script src="js/monitor.js"></script>
+    <script>
+      const { ipcRenderer } = require('electron');
+      const settingsForm =  document.getElementById('settings-form')
+      // Get settings
+      ipcRenderer.on('settings:get', (e, settings)=>{
+        document.getElementById('cpu-overload').value = settings.cpuOverload;
+        document.getElementById('alert-frequency').value = settings.alertFrequency;
+      })
+      // Submit settings
+      settingsForm.addEventListener('submit', (e)=>{
+        e.preventDefault();
+        const cpuOverload = document.getElementById('cpu-overload').value
+        const alertFrequency = document.getElementById('alert-frequency').value
+        // Send new settings to main process
+        ipcRenderer.send('settings:set',{
+          cpuOverload,
+          alertFrequency
+        })
+      })
+    </script>
 	</body>
 </html>
